linkedin clone Completion and Deployed Successfully.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "deployed_url": " https://linkedin-clone-yt-bbf2a.web.app",
   "name": "linkedin-clone",
   "version": "0.1.0",
   "private": true,
